# SubStringSouffle

./: .gitignore  .swp  CMakeLists.txt  README.md  arg  hippo  hippos  hippot  hippov  main  main.cpp  makefile  prog  prog14  progl  program  substrings__Test__.txt
HippoUtility/: Console.cpp  Console.h  File.cpp  File.h
SubStringSouffle/: .substringsouffle.cpp.swp  BasicTraverse.cpp  CMakeLists.txt  STRTraverse.cpp  SubStringSouffle  SubStringSouffle.cpp  SubStringSouffle.h  SubStringUtils.cpp  ThreadedTraverse.cpp  prog17
SubStringSouffle/SubStringSouffle.dSYM/Contents/: Info.plist
SubStringSouffle/SubStringSouffle.dSYM/Contents/Resources/DWARF/: SubStringSouffle
